# ph_codes

./: .gitignore  README.md  aboutme.md  codigos_ph_opi_3.geany  codigos_ph_opi_4.geany  meus_codigos.geany  meus_codigos_opi3.geany  projects  projects_opi4.geany
.ipynb_checkpoints/: README-checkpoint.md
Build_WRF/: configura_e_instala.sh
c_cpp/: .terceira_repeticao.c.swp  README.md  algoritmo_da_amizade  algoritmo_da_amizade.c  amplitude  amplitude.c  aumento_salario.c  compilando_linha_comando.md  compilando_linha_comando.txt  conversor.cpp  desvio_padrao  desvio_padrao.cpp  divisivelpor2  entre100_e_200  entre100_e_200.c  equacao2grau  equacao2grau.c  maiorque  maiorque10.c  moedas.cpp  primeira_repeticao  primeira_repeticao.c  quarta_repeticao  quarta_repeticao.c  quinta_repeticao  refri_dietetico.cpp  repeticao_3  repeticao_3.c  repeticao_4  repeticao_4.c  repeticao_5  repeticao_6  repeticao_6.c  repeticao_caractere  repeticoes_1  repeticoes_2  segunda_repeticao  segunda_repeticao.c  sexta_repeticao  terceira_repeticao
cpp/: aniversarioBach.cpp  aumento_salario  caixa_eletronico.cpp  dijkstra  dijkstra.cpp  divisivelpor2.c  equacao2grau  gravitacao_universal.cpp  inflacao.cpp  maiorque10  notas_parte_1.cpp  saldo_banco
java/: EntradaSaida.java  SaidaFormatada.java  meuPrograma2.java
javascript/: adivinha_mais_6.1.html  adivinha_mais_6.2.html  advinhacao.html  advinhacaoMOD.html  advinhacao_MOD.html  advinhacao_MOD2.html  app.js  app_http.js  calc.js  (+53 more)
meus_codigos/data/: Makefile.am
meus_codigos/src/: Makefile.am  meus_codigos-version.h.in  meus_codigos.h
(+1966 files in other folders)
